--- a/.github/workflows/gradle-actions-ci.yml
+++ b/.github/workflows/gradle-actions-ci.yml
@@ -33,7 +33,9 @@ jobs:
       run: chmod +x ./gradlew
     
     - name: Build with Gradle
-      run: ./gradlew build
+      uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
+      with:
+        arguments: build
         
     - name: Run Unit Tests
       run: ./gradlew test
