--- a/.github/workflows/gradle-actions-ci.yml
+++ b/.github/workflows/gradle-actions-ci.yml
@@ -31,6 +31,9 @@ jobs:
     #change the gradlew file permission to make it executable   
     - name: Change wrapper permissions
       run: chmod +x ./gradlew
+      
+    - name: Install gradle wrapper
+      run: gradle wrapper
     
     - name: Build with Gradle
       uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
