--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.1.0'
 	id 'io.spring.dependency-management' version '1.1.0'
+	id 'maven-publish'
 }
 
 group = 'com.shvaiba.liga'
@@ -31,4 +32,18 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+tasks.publishing {
+
+	repositories {
+		maven {
+			name = "GitHubPackages"
+			url = "https://maven.pkg.github.com/octocat/hello-world"
+			credentials {
+				username = project.findProperty("gpr.user") ?: System.getenv("USERNAME_GITHUB") // Define credentials via GitHub Actions secrets
+				password = project.findProperty("gpr.token") ?: System.getenv("PACKAGE_PAT") // Define credentials via GitHub Actions secrets
+			}
+		}
+	}
 }
